<resources>
    <string name="app_name">JuStyle</string>
    <string name="Email_Hint">Enter your Email</string>
    <string name="Register">Register User</string>
    <string name="Registered">Already Registered? Sign In Here</string>
    <string name="Login">Log In</string>
    <string name="NotRegistered">Don\'t have an account? Sign up Here</string>
    <string name="SignUp">Sign Up</string>
    <string name="uploadPicToCreateArticle">Upload Picture To Create Article</string>
    <string name="LogOut">Log Out</string>
    <string name="profile">MyJuStyle</string>
    <string name="More">More</string>
    <string name="Activities">Front Page</string>
    <string name="AddInfo">Add Profile Information</string>
    <string name="NameHint">Enter your Name</string>
    <string name="AddressHint">Enter your Address</string>
    <string name="UploadButtonId">Upload Picture</string>
    <string name="ChooseButtonId">Choose</string>
    <string name="CreateArticleText">Please write description here</string>
    <string name="CreateArticle">Create Article</string>
    <string name="ArticleNameId">Please Enter a Name</string>
    <string name="TakePic">Take Picture</string>
    <string name="marketplaceText">Marketplace</string>
    <string name="myWardrobeText">My Wardrobe</string>
    <string name="useCamera">Use Camera</string>
    <string name="search">Search</string>
    <string name="deleteProfileButton">Delete Profile</string>
    <string name="wifi_activate">allow uploading without wifi</string>
    <string name="battery_activate">Allow picture taking with less than %10 battery</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="DarkMode">Dark Mode</string>
    <string name="password_Hint">Enter your password</string>
    <string name="viewArticleName">Item name</string>
    <string name="viewArticleDescription">Missing Description</string>
    <string name="viewArticleUsername">Unknown user</string>
    <string name="button_search">button search</string>
    <string-array name="action">

        <item>To Sell</item>
        <item>To Rent</item>
        <item>To Lend</item>
        <item>Not Selected</item>

    </string-array>

</resources>
